# Game_Of_Life

./: CMakeLists.txt  README.md  simulate.c
life/: CMakeLists.txt  the_life.c  the_life.h
